- #30 Add a new field to configure frama-c command options